# marquee.py

./: .gitignore  deploy.sh  pyproject.toml
marquee/: __init__.py  config.py
marquee/aggregator/: __init__.py  core.py
marquee/analytics/: __init__.py  metrics.py
marquee/connectors/: __init__.py  base.py  dummy.py  registry.py  yfinance_connector.py
marquee/dashboard/: app.py  theme.py
marquee/dashboard/components/: charts.py  kpi_cards.py  sidebar.py
marquee/dashboard/pages/: history.py  overview.py  positions.py  settings.py
marquee/models/: __init__.py  account.py  instruments.py  portfolio.py  position.py
marquee/storage/: __init__.py  settings_store.py  store.py
