[tool.poetry]
name = "marquee"
version = "0.1.0"
description = "Financial portfolio aggregator"
authors = ["Ved Jaggi"]
packages = [{ include = "marquee" }]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.4"
pydantic = "^2.7"
pydantic-settings = "^2.3"
plotly = "^5.22"
httpx = "^0.27"
python-dotenv = "^1.0"

[tool.poetry.scripts]
marquee = "marquee.dashboard.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
